--- a/UI/src/app/modules/user-datasets/components/user-dataset-list/user-dataset-list.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-dataset-list/user-dataset-list.component.html
@@ -3,19 +3,113 @@
     <thead>
     <tr>
       <th scope="col" style="width: 10%">Dataset</th>
-      <th scope="col" style="width: 20%">Version</th>
-      <th scope="col" style="width: 20%">Variable</th>
-      <th scope="col" style="width: 15%">Units</th>
+      <th scope="col" style="width: 15%">Version</th>
+      <!--      <th scope="col" style="width: 10%">Variable Choices</th>-->
+      <th scope="col" style="width: 10%">Variable</th>
+      <th scope="col" style="width: 15%">Dimension Names</th>
       <th scope="col" style="width: 10%">File name</th>
-      <th scope="col" style="width: 25%"></th>
+      <th scope="col" style="width: 40%">Actions</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let userDataset of userDatasetList">
       <td>{{(getDataset(userDataset.dataset) | async)?.pretty_name}}</td>
       <td>{{(getDatasetVersion(userDataset.version) | async)?.pretty_name}}</td>
-      <td>{{(getDatasetVariable(userDataset.variable) | async)?.pretty_name}}</td>
-      <td>units</td>
+      <td>
+        <span
+          *ngIf="!(editVariable|async)"
+          (click)="editVariable.next(true)"
+          style="cursor: pointer"
+          pTooltip="Click to change the name"
+        >
+          {{((getDatasetVariable(userDataset.variable) | async)?.pretty_name)}}
+        </span>
+        <p-dropdown *ngIf="editVariable|async"
+                    class="form-field"
+                    [options]="(userDataset.variable_choices)"
+                    [ngModel]="chosenVariableName|async"
+                    (ngModelChange)="chosenVariableName.next($event)"
+                    [style]="{'width':'10rem', 'height': '2.5rem'}"
+                    optionLabel="variable"
+                    optionValue="variable"
+                    placeholder="Choose"
+                    editable="true"
+                    ngDefaultControl>
+        </p-dropdown>
+      </td>
+<!--      <td>units</td>-->
+      <td>
+        Latitude:
+        <span
+          *ngIf="!(editLatName|async)"
+          (click)="editLatName.next(true)"
+          style="cursor: pointer"
+          pTooltip="Click to change the name">
+          <b>{{userDataset.latname}}</b>
+        </span> <br>
+        <p-dropdown *ngIf="editLatName|async"
+                    class="form-field"
+                    [options]="(userDataset.lat_name_choices)"
+                    [ngModel]="chosenLatName|async"
+                    (ngModelChange)="chosenLatName.next($event)"
+                    [style]="{'width':'10rem', 'height': '2.5rem'}"
+                    optionLabel="name"
+                    optionValue="name"
+                    placeholder="Choose"
+                    editable="true"
+                    ngDefaultControl>
+        </p-dropdown>
+
+
+        Longitude:
+        <span
+          *ngIf="!(editLonName|async)"
+          (click)="editLonName.next(true)"
+          style="cursor: pointer"
+          pTooltip="Click to change the name">
+          <b>{{userDataset.lonname}}</b>
+        </span> <br>
+
+
+        <p-dropdown *ngIf="editLonName|async"
+                    class="form-field"
+                    [options]="(userDataset.lon_name_choices)"
+                    [ngModel]="chosenLonName|async"
+                    (ngModelChange)="chosenLonName.next($event)"
+                    [style]="{'width':'10rem', 'height': '2.5rem'}"
+                    optionLabel="name"
+                    optionValue="name"
+                    placeholder="Choose"
+                    editable="true"
+                    ngDefaultControl>
+        </p-dropdown>
+
+        Time:
+        <span
+          *ngIf="!(editTimeName|async)"
+          (click)="editTimeName.next(true)"
+          style="cursor: pointer"
+          pTooltip="Click to change the name">
+          <b>{{userDataset.timename}}</b>
+        </span> <br>
+
+
+        <p-dropdown *ngIf="editTimeName|async"
+                    class="form-field"
+                    [options]="(userDataset.time_name_choices)"
+                    [ngModel]="chosenTimeName|async"
+                    (ngModelChange)="chosenTimeName.next($event)"
+                    [style]="{'width':'10rem', 'height': '2.5rem'}"
+                    optionLabel="name"
+                    optionValue="name"
+                    placeholder="Choose"
+                    editable="true"
+                    ngDefaultControl>
+        </p-dropdown>
+
+
+
+      </td>
       <td>{{userDataset.file_name}}</td>
       <td>
         <button pButton
@@ -23,18 +117,27 @@
                 label="Remove dataset"
                 pTooltip="Remove dataset and the attached file"
                 class="p-button-danger"
+                [style]="{'width':'8rem', 'height': '2.5rem', 'margin-right': '0.5rem'}"
                 (click)="removeDataset(userDataset.id)">
         </button>
+        <button pButton
+                type="button"
+                label="Update metadata"
+                pTooltip="Remove dataset and the attached file"
+                class="p-button"
+                [style]="{'width':'8rem', 'height': '2.5rem', 'margin-right': '0.5rem'}"
+                (click)="updateMetdata(userDataset.id)">
+        </button>
       </td>
-<!--      <td>-->
-<!--        <button pButton-->
-<!--                type="button"-->
-<!--                label="Run dataset"-->
-<!--                pTooltip="This is a temporal button for testing uploaded data"-->
-<!--                class="p-button"-->
-<!--                (click)="testDataset(userDataset.id)">-->
-<!--        </button>-->
-<!--      </td>-->
+      <!--      <td>-->
+      <!--        <button pButton-->
+      <!--                type="button"-->
+      <!--                label="Run dataset"-->
+      <!--                pTooltip="This is a temporal button for testing uploaded data"-->
+      <!--                class="p-button"-->
+      <!--                (click)="testDataset(userDataset.id)">-->
+      <!--        </button>-->
+      <!--      </td>-->
     </tr>
     </tbody>
   </table>
