--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -19,8 +19,7 @@
         style="cursor: pointer"
         pTooltip="Click to change the name"
       >
-        variable: {{(variableName$|async)}}
-<!--        {{((getDatasetVariable(userDataset.variable) | async)?.short_name)}}-->
+        variable: {{(variableName.shortName$|async)}} ({{variableName.prettyName$|async}})
         </span>
       <div *ngIf="(editVariable.opened)">
         <label for="variable-dropdown">variable</label>
@@ -28,7 +27,7 @@
           id="variable-dropdown"
           class="form-field"
           [options]="(userDataset.variable_choices)"
-          [ngModel]="(variableName$|async)"
+          [ngModel]="(variableName.shortName$|async)"
           (ngModelChange)="updateMetadata(variableFieldName, $event, userDataset.id)"
           [style]="{'width':'6rem', 'height': '2rem'}"
           optionLabel="variable"
@@ -46,13 +45,6 @@
           (click)="toggle(variableFieldName,false)">
         </button>
       </div>
-      <!--      <span *ngFor="let config of configurations">-->
-      <!--        <span *ngIf="config.id !== validationRun.reference_configuration">-->
-      <!--          {{config.dataset}},-->
-      <!--          {{config.version}},-->
-      <!--          {{config.variable}} <br>-->
-      <!--        </span>-->
-      <!--      </span>-->
     </div>
     <!-- dimensions -->
     <div class="p-col">
