Information about user dataset managing options added; edit and tooltip icons added; tooltip text edited

--- a/UI/src/app/pages/my-datasets/my-datasets.component.scss
+++ b/UI/src/app/pages/my-datasets/my-datasets.component.scss
@@ -1,5 +1,9 @@
 @import "src/styles";
-//div {
-//  font-family: $base-font;
-//}
-
+.readMoreOrLess {
+  //font-size: 1rem;
+  cursor: pointer;
+  color: #007BFF;
+}
+li{
+  margin-top: 1.1rem;
+}
