--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -13,22 +13,26 @@
       <div><strong>Dataset: </strong></div>
       <div
         style="cursor: pointer"
-        pTooltip="Click on the name to change it. The new name can consist of 30 characters or fewer. Letters, digits and @/./+/-/_ only."
+        pTooltip="Click to change the name."
         tooltipPosition="bottom"
       > Name: <b>{{(getDataset(userDataset.dataset) | async)?.pretty_name}} </b>
+        <span class="pi pi-pencil small-edit-icon"></span>
       </div>
       <div
         style="cursor: pointer"
-        pTooltip="Click on the name to change it. The new name can consist of 30 characters or fewer. Letters, digits and @/./+/-/_ only."
+        pTooltip="Click to change the name."
         tooltipPosition="bottom"
-      > Version: <b>{{(getDatasetVersion(userDataset.version) | async)?.pretty_name}}</b></div>
+      > Version: <b>{{(getDatasetVersion(userDataset.version) | async)?.pretty_name}} </b>
+        <span class="pi pi-pencil small-edit-icon"></span>
+      </div>
       <span
         *ngIf="!(editVariable.opened)"
         (click)="toggle(variableFieldName,true)"
         style="cursor: pointer"
-        pTooltip="The variable name was retrieved from the file. If it is improper or you want to use another one, click on the name and choose a different one. Please note, if the chosen variable name is incorrect, data validation won't be possible."
+        pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible."
       >
         Variable: <b>{{(variableName.shortName$|async)}} ({{variableName.prettyName$|async}}) </b>
+        <span class="pi pi-question-circle small-edit-icon"></span>
         </span>
       <div *ngIf="(editVariable.opened)">
         <label for="variable-dropdown">Variable: </label>
@@ -58,17 +62,18 @@
     <!-- coordinates -->
     <div class="p-col">
       <div><strong>Coordinates: </strong>
-        <span class="pi pi-question-circle help-icon"
-              pTooltip="Coordinates names were retrieved from the file. If they are improper, click on the name and choose a different one. Please note, if the chosen coordinates names are incorrect, data validation won't be possible.">
-        </span>
+<!--        <span class="pi pi-question-circle help-icon"-->
+<!--              pTooltip="Coordinates names were retrieved from the file. If they are improper, click on the name and choose a different one. Please note, if the chosen coordinates names are incorrect, data validation won't be possible.">-->
+<!--        </span>-->
       </div>
       <div>
         <span
           *ngIf="!(editLatName.opened)"
           (click)="toggle(latFieldName, true)"
           style="cursor: pointer"
-          pTooltip="Click to change the name">
-          Latitude: <b>{{latitudeName$|async}}</b>
+          pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible.">
+          Latitude: <b>{{latitudeName$|async}} </b>
+          <span class="pi pi-question-circle small-edit-icon"></span>
         </span>
         <div *ngIf="editLatName.opened">
           <label for="latitude-dropdown">Latitude: </label>
@@ -100,8 +105,9 @@
           *ngIf="!(editLonName.opened)"
           (click)="toggle(lonFieldName, true)"
           style="cursor: pointer"
-          pTooltip="Click to change the name">
-          Longitude: <b>{{longitudeName$|async}}</b>
+          pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible.">
+          Longitude: <b>{{longitudeName$|async}} </b>
+          <span class="pi pi-question-circle small-edit-icon"></span>
         </span>
         <div *ngIf="editLonName.opened">
           <label for="longitude-dropdown">Longitude: </label>
@@ -134,8 +140,9 @@
           *ngIf="!(editTimeName.opened)"
           (click)="toggle(timeFiledName, true)"
           style="cursor: pointer"
-          pTooltip="Click to change the name">
-          Time: <b>{{timeName$|async}}</b>
+          pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible.">
+          Time: <b>{{timeName$|async}} </b>
+          <span class="pi pi-question-circle small-edit-icon"></span>
         </span>
         <div *ngIf="editTimeName.opened">
           <label for="time-dropdown">Time: </label>
