--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.scss
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.scss
@@ -11,3 +11,11 @@
   font-size: 0.8rem;
   line-height: 1rem;
 }
+.edit_dataset {
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  position: relative;
+  padding: 3px;
+  height: 2rem;
+  font-size: 1rem;
+}
