--- a/UI/src/app/pages/my-datasets/my-datasets.component.html
+++ b/UI/src/app/pages/my-datasets/my-datasets.component.html
@@ -13,7 +13,7 @@
   <div *ngIf="(userDatasets$ | async) as userDatasetList">
 
     <div *ngIf="userDatasetList.length != 0" class="container p-mb-5 p-mt-4" style="max-width: 70rem;">
-      <div class="lead text-muted p-pb-2">
+      <div class="lead text-muted p-pb-3">
         <div>
         Below you can find a list of datasets you have uploaded: <span *ngIf="!readMore">...</span>
         <span *ngIf="!readMore" (click)="toggleReadMore()" class="readMoreOrLess pi pi-arrow-down">
@@ -23,7 +23,7 @@
         <div *ngIf="readMore">
           <ul>
             <li>
-              The file name has been change and it consists of the dataset name and version, and upload date.
+              The file name has been changed and it consists of the dataset name and version, and upload date.
             </li>
             <li>
               The <b>variable</b> and <b>coordinates</b> names were retrieved from the file. <br>
@@ -44,6 +44,7 @@
         </div>
 
       </div>
+      <hr class="featurette-divider">
       <div>
         <div *ngFor="let userDataset of userDatasetList" class="p-mb-3">
           <qa-user-data-row [userDataset]="userDataset"></qa-user-data-row>
@@ -60,7 +61,7 @@
     </div>
   </div>
 
-
+  <qa-scroll-to-top></qa-scroll-to-top>
 
 </main>
 
