some styling updated

--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -9,7 +9,7 @@
   </ng-template>
   <div class="p-grid p-mx-0 p-px-0 p-my-0">
     <!--    dataset -->
-    <div class="p-col">
+    <div class="p-col-5">
       <div><strong>Dataset: </strong></div>
 
 
@@ -246,8 +246,6 @@
         </button>
       </div>
     </div>
-
-
   </div>
 
 </p-panel>
